--- a/holy-kitchen/publique.html
+++ b/holy-kitchen/publique.html
@@ -38,7 +38,7 @@
                 <img src="imagens/receita.jpeg" alt="Publique sua receita">
             </picture>
             <h2>Publique Sua Receita!</h2>
-            <p>Tem uma receita incrível que faz sucesso entre seus amigos e familiares? Compartilhe seu talento culinário com o mundo! Envie sua receita e inspire outros apaixonados por gastronomia a experimentar algo novo e delicioso.</p><br>
+            <p>Tem uma receita incrível que faz sucesso entre seus amigos e familiares? Compartilhe seu talento culinário com o mundo! Envie sua receita e inspire outros apaixonados por gastronomia a experimentar algo novo e delicioso.</p>
             <p>Após o envio do seu formulário, nossa equipe irá avaliar suas informações cuidadosamente. Assim que sua receita for aprovada, você receberá um e-mail de confirmação e, em poucos dias, sua receita será publicada no nosso site.</p>
         </div>
 
@@ -79,7 +79,7 @@
 
                 <p>
                     <label for="iporcao">Rende quantas porções?</label>
-                    <input type="number" name="porcao" id="iporcao" min="1" max="100">
+                    <input type="number" name="porcao" id="iporcao" min="1" max="100" placeholder="Selecione a quantidade">
                 </p>
 
                 <p>
@@ -97,7 +97,7 @@
                     <input type="file" name="midia" id="imidia">
                 </p>
 
-                <p>
+                <p id="botoes">
                     <input type="submit" value="Enviar">
                     <input type="reset" value="Limpar">
                 </p>
