--- a/holy-kitchen/index.html
+++ b/holy-kitchen/index.html
@@ -77,7 +77,7 @@
         </section>
 
         <section>
-            <h2 class="linha">Dica Boa é Dica Compartilhada</h2>
+            <h2 class="linha">Dica Boa Se Compartilha</h2>
 
             <div>
                 <article>
