--- a/holy-kitchen/cookies.html
+++ b/holy-kitchen/cookies.html
@@ -17,10 +17,10 @@
             <div class="menu">
                 <button id="menu-btn"><span class="material-icons">menu</span></button>
                 <ul id="menu-list">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Receitas Salgadas</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="tomate.html">Receitas Salgadas</a></li>
                     <li><a href="#">Receitas Doces</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </div>
             <h1 id="site-nome"><a href="index.html">Holy Kitchen!</a></h1>
