--- a/holy-kitchen/index.html
+++ b/holy-kitchen/index.html
@@ -19,9 +19,9 @@
                 <button id="menu-btn"><span class="material-icons">menu</span></button>
                 <ul id="menu-list">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Receitas Salgadas</a></li>
-                    <li><a href="#">Receitas Doces</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="tomate.html">Receitas Salgadas</a></li>
+                    <li><a href="cookies.html">Receitas Doces</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </div>
             <h1 id="site-nome"><a href="#">Holy Kitchen!</a></h1>
@@ -43,8 +43,8 @@
         <section id="publique">
             <a href="publique.html">
                 <picture>
-                    <source media="(max-width: 670px)" srcset="imagens/receita-pq.jpeg">
-                    <img src="imagens/receita.jpeg" alt="Publique sua Receita" title="Publique sua receita!">
+                    <source media="(max-width: 670px)" srcset="imagens/publique-pq.jpg">
+                    <img src="imagens/publique.jpg" alt="Publique sua Receita" title="Publique sua receita!">
                 </picture>
                 <h2>Publique sua Receita!</h2>
             </a>
