--- a/holy-kitchen/publique.html
+++ b/holy-kitchen/publique.html
@@ -17,10 +17,10 @@
             <div class="menu">
                 <button id="menu-btn"><span class="material-icons">menu</span></button>
                 <ul id="menu-list">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Receitas Salgadas</a></li>
-                    <li><a href="#">Receitas Doces</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="tomate.html">Receitas Salgadas</a></li>
+                    <li><a href="cookies.html">Receitas Doces</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </div>
             <h1 id="site-nome"><a href="index.html">Holy Kitchen!</a></h1>
@@ -34,8 +34,8 @@
         
         <div>
             <picture>
-                <source media="(max-width: 670px)" srcset="imagens/receita-pq.jpeg">
-                <img src="imagens/receita.jpeg" alt="Publique sua receita">
+                <source media="(max-width: 670px)" srcset="imagens/publique-pq.jpg">
+                <img src="imagens/publique.jpg" alt="Publique sua receita">
             </picture>
             <h2>Publique Sua Receita!</h2>
             <p>Tem uma receita incrível que faz sucesso entre seus amigos e familiares? Compartilhe seu talento culinário com o mundo! Envie sua receita e inspire outros apaixonados por gastronomia a experimentar algo novo e delicioso.</p>
