--- a/holy-kitchen/cookies.html
+++ b/holy-kitchen/cookies.html
@@ -34,8 +34,8 @@
         <div>
             <div>
                 <picture>
-                    <source media="(max-width: 670px)" srcset="imagens/cookies-pq.jpeg">
-                    <img src="imagens/cookies.jpeg" alt="Cookies" title="Cookies com gotas de chocolate, nham!">
+                    <source media="(max-width: 670px)" srcset="imagens/cookie-pq.jpeg">
+                    <img src="imagens/cookie.jpeg" alt="Cookies" title="Cookies com gotas de chocolate, nham!">
                 </picture>
             </div>
 
