--- a/holy-kitchen/index.html
+++ b/holy-kitchen/index.html
@@ -43,8 +43,8 @@
         <section id="publique">
             <a href="publique.html">
                 <picture>
-                    <source media="(max-width: 670px)" srcset="imagens/publique-pq.jpg">
-                    <img src="imagens/publique.jpg" alt="Publique sua Receita" title="Publique sua receita!">
+                    <source media="(max-width: 670px)" srcset="imagens/receita-pq.jpeg">
+                    <img src="imagens/receita.jpeg" alt="Publique sua Receita" title="Publique sua receita!">
                 </picture>
                 <h2>Publique sua Receita!</h2>
             </a>
@@ -57,8 +57,8 @@
                 <article>
                     <a href="cookies.html">
                         <picture>
-                            <source media="(max-width: 670px)" srcset="imagens/cookies-pq.jpeg">
-                            <img src="imagens/cookies.jpeg" alt="Cookies" title="Receita de Cookies!">
+                            <source media="(max-width: 670px)" srcset="imagens/cookie-pq.jpeg">
+                            <img src="imagens/cookie.jpeg" alt="Cookies" title="Receita de Cookies!">
                         </picture>
                         <h3>Cookies</h3>
                     </a>
@@ -67,8 +67,8 @@
                 <article>
                     <a href="tomate.html">
                         <picture>
-                            <source media="(max-width: 670px )" srcset="imagens/tomate-pq.jpeg">
-                            <img src="imagens/tomate.jpeg" alt="Sopa de tomate" title="Receita de sopa de tomate!">
+                            <source media="(max-width: 670px )" srcset="imagens/sopa-pq.jpeg">
+                            <img src="imagens/sopa.jpeg" alt="Sopa de tomate" title="Receita de sopa de tomate!">
                         </picture>
                         <h3>Sopa de Tomate</h3>
                     </a>
