--- a/holy-kitchen/pressa.html
+++ b/holy-kitchen/pressa.html
@@ -53,8 +53,8 @@
 
                 <div>
                     <picture>
-                        <source media="(max-width: 670px)" srcset="imagens/espaguete-pq.jpeg">
-                        <img src="imagens/espaguete.jpeg" alt="Espaguete alho e oleo" title="Prato de espaguete alho e óleo envolto de ingredientes">
+                        <source media="(max-width: 670px)" srcset="imagens/spaghetti-pq.jpeg">
+                        <img src="imagens/spaghetti.jpeg" alt="Espaguete alho e oleo" title="Prato de espaguete alho e óleo envolto de ingredientes">
                     </picture>
                 </div>
 
@@ -136,8 +136,8 @@
 
                 <div>
                     <picture>
-                        <source media="(max-width: 670px)" srcset="imagens/tacos-pq.jpeg">
-                        <img src="imagens/tacos.jpeg" alt="Tacos" title="Tacos quentes em cima de uma mesa ">
+                        <source media="(max-width: 670px)" srcset="imagens/taco-pq.jpeg">
+                        <img src="imagens/taco.jpeg" alt="Tacos" title="Tacos quentes em cima de uma mesa ">
                     </picture>
                 </div>
 
