--- a/holy-kitchen/tomate.html
+++ b/holy-kitchen/tomate.html
@@ -34,8 +34,8 @@
         <div>
             <div>
                 <picture>
-                    <source media="(max-width: 670px)" srcset="imagens/tomate-pq.jpeg">
-                    <img src="imagens/tomate.jpeg" alt="Sopa de tomate" title="Sopa de tomates, nham!">
+                    <source media="(max-width: 670px)" srcset="imagens/sopa-pq.jpeg">
+                    <img src="imagens/sopa.jpeg" alt="Sopa de tomate" title="Sopa de tomates, nham!">
                 </picture>
             </div>
 
