--- a/holy-kitchen/cookies.html
+++ b/holy-kitchen/cookies.html
@@ -31,15 +31,15 @@
     </header>
 
     <main>
-        <div>
-            <div>
+        <div class="introducao">
+            <div class="imagem">
                 <picture>
                     <source media="(max-width: 670px)" srcset="imagens/cookie-pq.jpeg">
                     <img src="imagens/cookie.jpeg" alt="Cookies" title="Cookies com gotas de chocolate, nham!">
                 </picture>
             </div>
 
-            <div>
+            <div class="receita">
                 <h2>Cookies!</h2>
                 <p>Prepare-se para se deliciar com os melhores cookies com gotas de chocolate que você já experimentou! Perfeitos para acompanhar um café ou para aqueles momentos em que você precisa de um doce irresistível, esses cookies são pura tentação!</p>
 
@@ -53,7 +53,6 @@
                     <li>Rendimento: 22 porções</li>
                 </ul>
             </div>
-            
         </div>
 
         <article>
