--- a/holy-kitchen/index.html
+++ b/holy-kitchen/index.html
@@ -19,8 +19,8 @@
                 <button id="menu-btn"><span class="material-icons">menu</span></button>
                 <ul id="menu-list">
                     <li><a href="#">Home</a></li>
-                    <li><a href="tomate.html">Receitas Salgadas</a></li>
-                    <li><a href="cookies.html">Receitas Doces</a></li>
+                    <li><a href="tomate.html">Salgados</a></li>
+                    <li><a href="cookies.html">Doces</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </div>
