--- a/holy-kitchen/publique.html
+++ b/holy-kitchen/publique.html
@@ -7,8 +7,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" href="imagens/favicon.ico">
     <link rel="stylesheet" href="estilos/header.css">
-    <link rel="stylesheet" href="./estilos/global.css">
-    <link rel="stylesheet" href="./estilos/publique.css">
+    <link rel="stylesheet" href="estilos/global.css">
+    <link rel="stylesheet" href="estilos/publique.css">
 </head>
 
 <body>
@@ -18,8 +18,8 @@
                 <button id="menu-btn"><span class="material-icons">menu</span></button>
                 <ul id="menu-list">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="tomate.html">Receitas Salgadas</a></li>
-                    <li><a href="cookies.html">Receitas Doces</a></li>
+                    <li><a href="tomate.html">Salgados</a></li>
+                    <li><a href="cookies.html">Doces</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </div>
