--- a/holy-kitchen/tomate.html
+++ b/holy-kitchen/tomate.html
@@ -18,8 +18,8 @@
                 <button id="menu-btn"><span class="material-icons">menu</span></button>
                 <ul id="menu-list">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Receitas Salgadas</a></li>
-                    <li><a href="cookies.html">Receitas Doces</a></li>
+                    <li><a href="#">Salgados</a></li>
+                    <li><a href="cookies.html">Doces</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </div>
