--- a/holy-kitchen/publique.html
+++ b/holy-kitchen/publique.html
@@ -31,11 +31,10 @@
     </header>
 
     <main>
-        
         <div>
             <picture>
                 <source media="(max-width: 670px)" srcset="imagens/receita-pq.jpeg">
-                <img src="imagens/receita-pq.jpeg" alt="Publique sua receita">
+                <img src="imagens/receita.jpeg" alt="Publique sua Receita" title="Publique sua receita!">
             </picture>
             <h2>Publique Sua Receita!</h2>
             <p>Tem uma receita incrível que faz sucesso entre seus amigos e familiares? Compartilhe seu talento culinário com o mundo! Envie sua receita e inspire outros apaixonados por gastronomia a experimentar algo novo e delicioso.</p>
