--- a/holy-kitchen/index.html
+++ b/holy-kitchen/index.html
@@ -32,7 +32,7 @@
     </header>
 
     <main>
-        <section id="main">
+        <section class="main">
             <h2>Bem-vindo ao Holy Kitchen!</h2>
             <p>Aqui você encontra as melhores receitas para os mais diversos gostos!</p>
         </section>
@@ -46,7 +46,7 @@
                     <source media="(max-width: 670px)" srcset="imagens/receita-pq.jpeg">
                     <img src="imagens/receita.jpeg" alt="Publique sua Receita" title="Publique sua receita!">
                 </picture>
-                <h2>Publique sua Receita!</h2>
+                <h3>Publique sua Receita!</h2>
             </a>
         </section>
 
