--- a/holy-kitchen/cookies.html
+++ b/holy-kitchen/cookies.html
@@ -18,8 +18,8 @@
                 <button id="menu-btn"><span class="material-icons">menu</span></button>
                 <ul id="menu-list">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="tomate.html">Salgados</a></li>
-                    <li><a href="#">Doces</a></li>
+                    <li><a href="tomate.html">Receitas Salgadas</a></li>
+                    <li><a href="#"> Receitas Doces</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </div>
@@ -46,17 +46,17 @@
                 <br>
                 <hr>
                 <br>
-
-                <h3 class="info">Informações</h3>
-                <ul class="info-list">
-                    <li>Tempo de preparo: 40 minutos</li>
-                    <li>Rendimento: 22 porções</li>
-                </ul>
             </div>
         </div>
 
         <article>
             <section>
+                <h3 class="linha">Informações</h3>
+                <ul>
+                    <li>Tempo de preparo: 40 minutos</li>
+                    <li>Rendimento: 22 porções</li>
+                </ul>
+
                 <h3 class="linha">Ingredientes</h3>
                 <ul>
                     <li>125g de manteiga sem sal em temperatura ambiente;</li>
