--- a/holy-kitchen/piquenique.html
+++ b/holy-kitchen/piquenique.html
@@ -18,8 +18,8 @@
                 <button id="menu-btn"><span class="material-icons">menu</span></button>
                 <ul id="menu-list">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="tomate.html">Salgados</a></li>
-                    <li><a href="cookies.html">Doces</a></li>
+                    <li><a href="tomate.html">Receitas Salgadas</a></li>
+                    <li><a href="cookies.html">Receitas Doces</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </div>
@@ -32,7 +32,6 @@
 
     <main>
         <article>
-
             <div>
                 <picture>
                     <source media="(max-width: 670px)" srcset="imagens/piquenique-pq.jpg">
@@ -83,7 +82,7 @@
         
         <br>
 
-        <p>Lembre-se de verificar as condições do tempo e a localização para garantir que o piquenique seja confortável e agradável!</p>
+        <p id="lembrete">Lembre-se de verificar as condições do tempo e a localização para garantir que o piquenique seja confortável e agradável!</p>
 
         <br>
         <hr>
