--- a/holy-kitchen/tomate.html
+++ b/holy-kitchen/tomate.html
@@ -18,8 +18,8 @@
                 <button id="menu-btn"><span class="material-icons">menu</span></button>
                 <ul id="menu-list">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Salgados</a></li>
-                    <li><a href="cookies.html">Doces</a></li>
+                    <li><a href="#">Receitas Salgadas</a></li>
+                    <li><a href="cookies.html">Receitas Doces</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </div>
@@ -31,32 +31,33 @@
     </header>
 
     <main>
-        <div>
-            <div>
+        <div class="introducao">
+            <div class="imagem">
                 <picture>
                     <source media="(max-width: 670px)" srcset="imagens/sopa-pq.jpeg">
                     <img src="imagens/sopa.jpeg" alt="Sopa de tomate" title="Sopa de tomates, nham!">
                 </picture>
             </div>
 
-            <div>
+            <div class="receita">
                 <h2>Sopa de Tomate</h2>
                 <p>Desfrute do sabor irresistível da nossa sopa de tomate, uma combinação perfeita de tomates frescos e ervas aromáticas que vai aquecer seu coração. Simples de preparar e incrivelmente deliciosa, esta sopa é o conforto que você procura em dias frios ou sempre que quiser algo leve e saboroso. Experimente e surpreenda-se com a riqueza de sabores!</p>
 
                 <br>
                 <hr>
                 <br>
-
-                <h3 class="info">Informações</h3>
-                <ul class="info-list">
-                    <li>Tempo de preparo: 1 hora e 10 minutos</li>
-                    <li>Rendimento: 8 porções</li>
-                </ul>
             </div>
         </div>
 
         <article>
             <section>
+
+                <h3 class="linha">Informações</h3>
+                <ul>
+                    <li>Tempo de preparo: 1 hora e 10 minutos</li>
+                    <li>Rendimento: 8 porções</li>
+                </ul>
+
                 <h3 class="linha">Ingredientes</h3>
                 <ul>
                     <li>3 colheres (sopa) de azeite de oliva (45ml)</li>
