--- a/holy-kitchen/pressa.html
+++ b/holy-kitchen/pressa.html
@@ -17,8 +17,8 @@
                 <button id="menu-btn"><span class="material-icons">menu</span></button>
                 <ul id="menu-list">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="tomate.html">Salgados</a></li>
-                    <li><a href="cookies.html">Doces</a></li>
+                    <li><a href="tomate.html">Receitas Salgadas</a></li>
+                    <li><a href="cookies.html">Receitas Doces</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </div>
@@ -31,13 +31,6 @@
 
     <main>
         <div>
-            <div>
-                <picture>
-                    <source media="(max-width: 670px)" srcset="imagens/pressa-pq.jpg">
-                    <img src="imagens/pressa.jpg" alt="Pressa" title="Receitas rápidas para quem está sem tempo">
-                </picture>
-            </div>
-
             <div>
                 <h2>Está com pressa?</h2>
                 <p>Sem tempo para cozinhar? Essas receitas rápidas e fáceis são perfeitas para quem está com a agenda cheia, mas não quer abrir mão de uma refeição deliciosa.</p>
@@ -62,19 +55,19 @@
                     <p>Um prato clássico, fácil e rápido de preparar, perfeito para qualquer ocasião.</p>
 
                     <strong>Tempo de preparo: 10 minutos</strong>
-
-                    <h4 class="linha">Ingredientes</h4>
-                    <ul>
-                        <li>200g de macarrão</li>
-                        <li>2 dentes de alho picados</li>
-                        <li>Azeite de oliva</li>
-                        <li>Sal e pimenta a gosto</li>
-                        <li>Queijo parmesão ralado (opcional)</li>
-                    </ul>
                 </div>    
             </div>
 
             <section class="conteudo">
+                <h4 class="linha">Ingredientes</h4>
+                <ul>
+                    <li>200g de macarrão</li>
+                    <li>2 dentes de alho picados</li>
+                    <li>Azeite de oliva</li>
+                    <li>Sal e pimenta a gosto</li>
+                    <li>Queijo parmesão ralado (opcional)</li>
+                </ul>
+
                 <h4 class="linha">Modo de Preparo</h4>
                 <ul>
                     <li>Cozinhe o macarrão conforme as instruções da embalagem.</li>
@@ -103,8 +96,12 @@
                     <p>Refresque-se com um smoothie cremoso de banana e morango, a combinação perfeita de sabor e praticidade em um só copo!</p>
 
                     <strong>Tempo de preparo: 5 minutos</strong>
+                </div>
+            </div>
 
-                    <h4 class="linha">Ingredientes</h4>
+            <section class="conteudo">
+
+                <h4 class="linha">Ingredientes</h4>
                     <ul>
                         <li>2 bananas</li>
                         <li>2 xícaras de chá de morangos</li>
@@ -112,10 +109,7 @@
                         <li>Adoçante ou açúcar a gosto</li>
                         <li>Gelo a gosto</li>
                     </ul>
-                </div>
-            </div>
 
-            <section class="conteudo">
                 <h4 class="linha">Modo de Preparo</h4>
                 <ul>
                     <li>Corte as bananas e os morangos em pedaços menores.</li>
@@ -145,8 +139,12 @@
                     <p>Delicie-se com tacos irresistíveis que são incrivelmente fáceis e rápidos de preparar, ideal para uma refeição saborosa sem complicação.</p>
 
                     <strong>Tempo de preparo: 10 minutos</strong>
+                </div> 
+            </div>
 
-                    <h4 class="linha">Ingredientes</h4>
+            <section class="conteudo">
+
+                <h4 class="linha">Ingredientes</h4>
                     <ul>
                         <li>Tortillas de trigo ou milho</li>
                         <li>Frango desfiado ou carne moída</li>
@@ -155,10 +153,7 @@
                         <li>Molho de tomate</li>
                         <li>Creme de leite ou iogurte grego</li>
                     </ul>
-                </div> 
-            </div>
 
-            <section class="conteudo">
                 <h4 class="linha">Modo de Preparo</h4>
                 <ul>
                     <li>Aqueça as tortillas em uma frigideira por alguns segundos.</li>
