--- a/sweet-flame/index.html
+++ b/sweet-flame/index.html
@@ -51,7 +51,7 @@
             </picture>
         </section>
 
-        <h2>Confira as Coleções</h2>
+        <h2>✦Cofira as Coeções✦</h2>
 
         <section id="colection">
             <div>
@@ -70,7 +70,7 @@
             </div>
         </section>
 
-        <h2>Destaques</h2>
+        <h2>✦estaues✦</h2>
 
         <section id="destaque">
             <div>
@@ -89,7 +89,7 @@
             </div>
         </section>
 
-        <h2>Mais Vendidos</h2>
+        <h2>✦ais Venddos✦</h2>
 
         <section id="vendidos">
             <div>
